--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,13 +3,19 @@ name: Build and push packages to PackageCloud.
 on:
   push:
     branches:
-      - 'legacy'
+      - 'main'
     paths-ignore:
       - 'README.md'
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
+
+    container:
+      image: debian:testing
+      env:
+        DEBIAN_FRONTEND: noninteractive
+
     steps:
       - uses: actions/checkout@v3
 
@@ -25,4 +31,4 @@ jobs:
         env:
           PACKAGECLOUD_TOKEN: ${{ secrets.PACKAGECLOUD_TOKEN }}
         run: |
-          package_cloud push nitrux/testing/debian/trixie $(pwd)/*.deb
+          package_cloud push nitrux/testing/debian/forky $(pwd)/*.deb
