--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,13 +17,13 @@ jobs:
         DEBIAN_FRONTEND: noninteractive
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Install necessary packages
+        run: apt -q update && apt -yy install build-essential curl gnupg patchelf python3-pip ruby-full sudo wget
 
-      - name: Install dependencies.
-        run: |
-          sudo gem install package_cloud
+      - name: Install PackageCloud
+        run: gem install package_cloud
 
-      - name: Build.
+      - name: Generate Debian package
         run: |
           sudo ./gh-build.sh
 
