--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,8 @@ jobs:
         DEBIAN_FRONTEND: noninteractive
 
     steps:
+      - uses: actions/checkout@v4
+
       - name: Install necessary packages
         run: apt -q update && apt -yy install build-essential curl gnupg patchelf python3-pip ruby-full sudo wget
 
